test/Fail/customised/Issue6465/A/B.agda
module A.B where

{-# NON_TERMINATING #-}

easy : (A : Set) → A
easy = easy
